--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,17 +17,24 @@
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  
 }
 
 @layer utilities {
   .text-balance {
     text-wrap: balance;
   }
+}
+
+
+.bg-custom-image {
+  background-image: url('../../public/gym.jpg'); /* Use the correct path to your image */
+  background-size: cover;
+  background-position: center;
+  position: relative;
+}
+
+
+.text-shadow {
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.75); /* Adjust the shadow properties here */
 }
